[project]
name = "helldivepy"
version = "0.1.0"
description = "A Helldivers 2 API wrapper"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Anthony Kovach", email = "aj@ajxd2.dev" }
]
keywords = ["helldivers 2", "api", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["helldivepy"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "rich>=14.3.3",
    "ruff>=0.15.5",
]
